Fixed client redirects